--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -81,7 +81,7 @@ HEADER QR code
     padding: 8px;
     border-radius: 2px;
     display: none;
-    animation: fadeIn ease-in 1s;
+    animation: fadeIn ease-in .3s;
 }
 
 .header__qr-img {
@@ -107,4 +107,122 @@ HEADER QR code
 
 .header__navbar-item--show:hover .header__qr {
     display: block;
+}
+
+.header__notify {
+    width: 404px;
+    position: absolute;
+    top: 120%;
+    right: 0;
+    background-color: var(--white-color);
+    border: 1px solid #d3d3d3;
+    border-radius: 2px;
+    cursor: default;
+    transform-origin: calc(100% - 20px) top;
+    animation: headerNotify ease-in 0.3s;
+    will-change: opacity, tranform;
+    display: none;
+}
+
+.header__navbar-item--notify:hover .header__notify {
+    display: block;
+}
+
+.header__notify::before {
+    content: '';
+    border-width: 20px 30px;
+    border-style: solid;
+    border-color: transparent transparent var(--white-color) transparent;
+    position: absolute;
+    top: -30px;
+    right: 0px;
+}
+
+.header__notify::after {
+    content: '';
+    display: block;
+    position: absolute;
+    width: 90px;
+    height: 20px;
+    right: 0;
+    top: -16px;
+}
+
+@keyframes headerNotify {
+    from {
+        opacity: 0;
+        transform: scale(0);
+    }
+    to {
+        opacity: 1;
+        transform: scale(1);
+    }
+}
+
+.header__notify-header {
+    height: 40px;
+    background-color: var(--white-color);
+}
+
+.header__notify-header h3 {
+    color: #666666;
+    margin: 0 0 0 12px;
+    font-weight: 400;
+    font-size: 1.5rem;
+    line-height: 40px;
+}
+
+.header__notify-list {
+    padding-left: 0;
+}
+
+.header__notify-item:hover {
+    background-color: #f1f1f1;
+}
+
+.header__notify-item--view {
+    background-color: rgba(238, 61, 45, 0.08);
+}
+
+.header__notify-link {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    padding: 12px;
+}
+
+.header__notify-img {
+    width: 48px;
+    object-fit: contain;
+}
+
+.header__notify-info {
+    margin-left: 12px;
+}
+
+.header__nofify-name {
+    display: block;
+    color: var(--black-color);
+    font-size: 1.4rem;
+    font-weight: 400;
+}
+
+.header__nofify-desc {
+    display: block;
+    font-size: 1.2rem;
+    color: #756f6e;
+    margin-top: 6px;
+}
+
+.header__notify-view-all {
+    text-align: center;
+}
+
+.header__notify_btn {
+    display: block;
+    text-decoration: none;
+    padding: 8px 16px;
+    font-size: 1.4rem;
+    font-weight: 400;
+    color: var(--text-color);
 }
